--- a/Spotify/src/layouts/Layout.astro
+++ b/Spotify/src/layouts/Layout.astro
@@ -97,7 +97,7 @@ const { title } = Astro.props;
 	}
 
 	.cont {
-		background-image: url(C:\Users\mamit\OneDrive\Escritorio\desarrollo2.0\Spotify\Spotify\Captura de pantalla 2024-09-08 104928.png);
+		background-image: url(C:\Users\mamit\Spotify\Spotify\img\Captura de pantalla 2024-09-08 104928.png);
 		background-repeat: no-repeat;
 		background-size: cover;
 		height: 650px;
